# rust-mlp

./: Cargo.toml  README.md  pyproject.toml  scripts.sh  test.ipynb
src/: lib.rs  mlp.rs  mytest.rs
