[package]
name = "rust-mlp"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_mlp"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
candle-core = "0.9.1"
candle-nn = "0.9.1"
pyo3 = "0.27.0"
serde = "1.0.228"
serde_json = "1.0.145"
